Some additional overflow fixes

--- a/jubside/static/css/jubileum.css
+++ b/jubside/static/css/jubileum.css
@@ -33,6 +33,11 @@ body { padding-top: 0; }
 @media only screen and (min-width: 768px) {
     .dropdown-menu { right: 0; left: auto!important; }
 }
+
+@media (max-width: 768px) {
+    .dropdown-menu li a { white-space: break-spaces; }
+}
+
 .dropdown-menu .divider { padding: 0!important; }
 .dropdown-menu li a:hover { background-color: transparent; }
 
@@ -74,6 +79,7 @@ nav div img {
 #user-block {
     font-weight: bold;
     margin: auto;
+    padding: 0;
 }
 
 #user-block a:focus {
@@ -119,7 +125,7 @@ nav div img {
 @media only screen and (max-width: 767px) { /* min-width rules won't override this otherwise */
     #site-navigation > input:checked + #main-menu {
 	position: absolute;
-	top: 43px; /*40 + 3*/
+	top: 60px; /*40 + 3*/
 	right: 0;
 	display: block;
 	clear: both;
@@ -127,6 +133,7 @@ nav div img {
 	background-color: var(--bar-color);
 	text-align: right;
 	z-index: 1; /* above header image */
+  padding-bottom: 1px;
     }
 }
 
@@ -292,7 +299,7 @@ main {
 
 @media (max-width: 502px) {
     main { width: 98%; }
-    .jub-content article { width: 300px; }
+    .jub-content article { width: 80%; margin: auto; }
     .jub-content article .article-block { width: 100%!important; }
     .jub-content article .article-thumbnail{ display: none; }
     #logo { display: none; }
@@ -318,9 +325,6 @@ main {
 
 .jub-content article .article-paragraph h4 {
     font-family: RobotoBold;
-    text-overflow: ellipdisplay: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
 }
 
 .jub-content article .article-thumbnail {
